[package]
name = "verifiable-controllers"
version = "0.1.0"
edition = "2021"

[features]
default = ["openssl-tls", "kubederive", "ws", "runtime", "k8s-openapi/v1_30"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]

[dependencies]
verus_builtin = "0.0.0-2025-08-12-1837"
verus_builtin_macros = "0.0.0-2025-08-12-1837"
vstd = "=0.0.0-2025-08-12-1837"
tungstenite = "0.20.1"
rand = "0.8"
kube = { version = "0.91.0", default-features = false, features = [
  "admission",
] }
kube-derive = { version = "0.91.0", default-features = false } # only needed to opt out of schema
kube-client = { version = "0.91.0", default-features = false }
kube-core = { version = "0.91.0", default-features = false }
k8s-openapi = { version = "0.22.0", default-features = false, features = [
  "schemars",
] }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
schemars = "0.8.6"
thiserror = "1.0.29"
tracing = "0.1.36"
tracing-subscriber = "0.3.17"
anyhow = "1.0.71"
futures = "0.3.17"
base64 = "0.13.0"
chrono = "0.4.19"
proptest = "1.4.0"
warp = { version = "0.3", features = ["tls"] }

[package.metadata.verus]
verify = true
