[package]
name = "verifiable-controllers"
version = "0.1.0"
edition = "2021"

[features]
default = ["openssl-tls", "kubederive", "ws", "runtime", "k8s-openapi/v1_30"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]

[dependencies]
vstd = "=0.0.0-2026-06-14-0213"
verus_temporal_logic = { path = "../verus-tla" }

kube = { version = "0.91.0", default-features = false, features = ["admission"] }
kube-client = { version = "0.91.0", default-features = false }
kube-core = { version = "0.91.0", default-features = false }
kube-derive = { version = "0.91.0", default-features = false }
k8s-openapi = { version = "0.22.0", default-features = false, features = ["schemars"] }
kube_quantity = "0.9.0"

tokio = { version = "1.38.2", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
schemars = "0.8.6"
thiserror = "1.0.29"
tracing = "0.1.36"
tracing-subscriber = "0.3.20"
anyhow = "1.0.71"
futures = "0.3.17"
base64 = "0.13.0"
rand = "0.8"
chrono = "0.4.19"
proptest = "1.4.0"
warp = { version = "0.3", features = ["tls"] }
tungstenite = "0.20.1"

[package.metadata.verus]
verify = true
