[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

[dependencies]
verus_builtin = "0.0.0-2025-08-12-1837"
verus_builtin_macros = "0.0.0-2025-08-12-1837"
vstd = "=0.0.0-2025-08-12-1837"
verifiable-controllers = { path = ".." }
kube = { version = "0.91.0", default-features = false, features = ["admission"] }
k8s-openapi = { version = "0.22.0", default-features = false }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
schemars = "0.8.6"
tracing = "0.1.36"
tracing-subscriber = "0.3.17"
anyhow = "1.0.71"
warp = { version = "0.3", features = ["tls"] }

[package.metadata.verus]
verify = true
