[package]
name = "deps_hack"
version = "0.1.0"
edition = "2021"

[features]
default = ["openssl-tls", "kubederive", "ws", "runtime", "k8s-openapi/v1_26"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.78.0", default-features = false, features = ["admission"] }
kube-derive = { version = "0.78.0", default-features = false } # only needed to opt out of schema
kube-client = { version = "0.78.0", default-features = false }
kube-core = { version = "0.78.0", default-features = false }
k8s-openapi = { version = "0.17.0", default-features = false, features = ["schemars"] }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
schemars = "0.8.6"
thiserror = "1.0.29"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
anyhow = "1.0.44"
futures = "0.3.17"
base64 = "0.13.0"
rand = "0.8"
zookeeper = "0.8"
chrono = "0.4.19"
