[package]
name = "simple_controller_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["openssl-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_26"]

[dependencies]
tokio-util = "0.7.0"
anyhow = "1.0.44"
futures = "0.3.17"
kube = { version = "0.78.0", default-features = false, features = ["admission"] }
kube-derive = { version = "0.78.0", default-features = false } # only needed to opt out of schema
kube-client = { version = "0.78.0", default-features = false }
kube-core = { version = "0.78.0", default-features = false }
k8s-openapi = { version = "0.17.0", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.14.0", features = ["full"] }
schemars = "0.8.6"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
http = "0.2.5"
thiserror = "1.0.29"
tokio-stream = { version = "0.1.9", features = ["net"] }
