[package]
name = "admission_control"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive", "admission"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tracing = "0.1.41"
jsonptr = "0.6"
warp = { version = "0.3.7", features = ["tls"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
json-patch = "3.0.1"